Small overflow bug fix

--- a/src/chrome-extension/content-script/components/save-note-modal/save-note-editor/save-note-editor.scss
+++ b/src/chrome-extension/content-script/components/save-note-modal/save-note-editor/save-note-editor.scss
@@ -1,6 +1,7 @@
 .peak-note-editor-container {
   width: 100%;
   height: 69%;
+  overflow: auto;
 
   .peak-note-editor {
     height: 100%;
